tests/func/parsing/error_reporting/unexpected/unexpected_token.err
/parsing/error_reporting/unexpected/unexpected_token.input:1:8: syntax error: unexpected token +
    1 | 3 + 4 - + 5
      |         ^^^ expected: number